# PromptUI

./: .gitignore  LICENSE  README.md  build.spec  requirements.txt  run.py
.github/workflows/: release.yml
__recycle_bin/: cleaning.py  cleaning2.py  fix_final.py  mappings.json
app/: main.py
app/api/: fetch_url.py  styles.py
app/core/: analyzer.py  generators.py  visual_mapper.py
c_modules/: CMakeLists.txt
c_modules/dict/Chinese/: sensitive_words_cn.txt
c_modules/src/: analyzer.c  main.c
dict/Chinese/: stop_words_cn.txt
scripts/: build_unix.sh  build_windows.bat  build_windows.ps1  generate_highfreq_mapping.py  generator.py
static/: index.html  script.js  style.css
static/mappings/: mappings.json  mappings_main.json  mappings_styles.json
